Fix large logo display on mobile #2519

--- a/src/html-pages/group-page/common-components/_index.scss
+++ b/src/html-pages/group-page/common-components/_index.scss
@@ -28,7 +28,11 @@
 }
 
 .page-header__large_logo {
-  width: 400px;
+  width: 320px;
+
+  @include breakpoints.not-narrow() {
+    width: 400px;
+  }
 }
 
 .follow-button {
